# Kzip

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  file  main.cpp
Huffman 1-st v./: CMakeLists.txt  main.cpp
Huffman 1-st v./huffman/: Huffman.cpp  Huffman.h  Node.cpp
codecs/: codec.h
huffman/: Huffman.cpp  Huffman.h  Huffman_another.cpp  Huffman_another.h  Huffman_better.cpp  Huffman_better.h  Node.cpp  Node.h  Node_another.cpp  Node_another.h  Node_better.cpp  Trie.h
huffman_better/: Huffman_better.cpp  Huffman_better.h  Node_better.cpp  Node_better.h  Suffix_tree.cpp  Suffix_tree.h  Trie.cpp  Trie.h
src/: Dict.cpp  Huffman.cpp  Huffman.h  Huffman_better.cpp  Huffman_better.h  Node.cpp  Node.h  Node_better.cpp  Node_better.h  Suffix_tree.cpp  Suffix_tree.h  Trie.cpp  Trie.h  Util.h
suff-structures/: Node.cpp  Node.h  Suff-tree  Suff-tree.cpp
tester/: tester.cpp  tester.h
